--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -49,6 +49,15 @@ exec-once = waybar
 # Load X resources for DPI
 exec-once = xrdb ~/.Xresources
 
+# Start swww daemon and set wallpaper
+exec-once = ~/.config/swww/swww-autostart.sh
+
+# Start network manager applet
+exec-once = nm-applet
+
+# Start bluetooth manager applet
+exec-once = blueman-applet
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -121,8 +130,8 @@ decoration {
     rounding_power = 2
 
     # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    active_opacity = 0.95
+    inactive_opacity = 0.8
 
     shadow {
         enabled = true
@@ -134,10 +143,17 @@ decoration {
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
+        size = 8
+        passes = 2
+        
         vibrancy = 0.1696
+        brightness = 1.0
+        contrast = 1.0
+        noise = 0.0117
+        
+        # Blur for layered surfaces (e.g., notifications)
+        new_optimizations = true
+        xray = true
     }
 }
 
@@ -311,6 +327,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+# Wallpaper controls
+bind = $mainMod, W, exec, ~/.config/swww/swww-random.sh
+bind = $mainMod SHIFT, W, exec, ~/.config/swww/swww-set.sh
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -331,3 +351,17 @@ windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned
 xwayland {
     force_zero_scaling = true
 }
+
+# Transparency rules for specific applications
+windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
+windowrulev2 = opacity 0.9 0.8, class:^(Alacritty)$
+windowrulev2 = opacity 0.85 0.75, class:^(kate)$
+windowrulev2 = opacity 0.85 0.75, class:^(Code)$
+windowrulev2 = opacity 0.9 0.8, class:^(dolphin)$
+windowrulev2 = opacity 0.95 0.9, class:^(firefox)$
+windowrulev2 = opacity 0.95 0.9, class:^(google-chrome)$
+
+# Keep some apps fully opaque
+windowrulev2 = opacity 1.0 1.0, class:^(mpv)$
+windowrulev2 = opacity 1.0 1.0, class:^(vlc)$
+windowrulev2 = opacity 1.0 1.0, class:^(gimp)$
