feat: remove flameshot and update readme

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -59,6 +59,8 @@ exec-once = nm-applet
 exec-once = blueman-applet
 
 
+
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -74,6 +76,7 @@ env = QT_IM_MODULE,fcitx
 env = XMODIFIERS,@im=fcitx
 env = SDL_IM_MODULE,fcitx
 env = GLFW_IM_MODULE,ibus
+env = XDG_CURRENT_DESKTOP,Hyprland
 
 # XWayland scaling fix
 env = GDK_SCALE,1.2
@@ -267,6 +270,7 @@ bind = ALT, grave, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -313,6 +317,21 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Window management shortcuts
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
+# Resize windows
+bind = $mainMod CTRL, left, resizeactive, -50 0
+bind = $mainMod CTRL, right, resizeactive, 50 0
+bind = $mainMod CTRL, up, resizeactive, 0 -50
+bind = $mainMod CTRL, down, resizeactive, 0 50
+
+# Center window
+bind = $mainMod, period, centerwindow
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
@@ -331,6 +350,11 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 bind = $mainMod, W, exec, ~/.config/swww/swww-random.sh
 bind = $mainMod SHIFT, W, exec, ~/.config/swww/swww-set.sh
 
+# Power management
+bind = $mainMod, L, exec, systemctl suspend
+bind = $mainMod SHIFT, L, exec, ~/.config/hypr/power-menu.sh
+bind = $mainMod CTRL, L, exec, swaylock -f -c 000000 || hyprlock
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -347,6 +371,15 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+# Improve XWayland app behavior
+windowrulev2 = immediate, xwayland:1
+windowrulev2 = noinitialfocus, class:^jetbrains-.*$, title:^win.*$
+
+# Fix electron apps (Discord, etc.)
+windowrulev2 = opaque, class:^(discord)$
+windowrulev2 = opaque, class:^(WebCord)$
+
+
 # Fix XWayland font scaling issues
 xwayland {
     force_zero_scaling = true
@@ -356,7 +389,7 @@ xwayland {
 windowrulev2 = opacity 0.9 0.8, class:^(kitty)$
 windowrulev2 = opacity 0.9 0.8, class:^(Alacritty)$
 windowrulev2 = opacity 0.85 0.75, class:^(kate)$
-windowrulev2 = opacity 0.85 0.75, class:^(Code)$
+# VSCode opacity is handled in the VSCode specific section below
 windowrulev2 = opacity 0.9 0.8, class:^(dolphin)$
 windowrulev2 = opacity 0.95 0.9, class:^(firefox)$
 windowrulev2 = opacity 0.95 0.9, class:^(google-chrome)$
@@ -365,3 +398,23 @@ windowrulev2 = opacity 0.95 0.9, class:^(google-chrome)$
 windowrulev2 = opacity 1.0 1.0, class:^(mpv)$
 windowrulev2 = opacity 1.0 1.0, class:^(vlc)$
 windowrulev2 = opacity 1.0 1.0, class:^(gimp)$
+
+# VSCode specific fixes
+windowrulev2 = size 1400 900, class:^(Code)$
+windowrulev2 = center 1, class:^(Code)$
+windowrulev2 = opacity 0.92 0.85, class:^(Code)$
+
+# Fix VSCode dialog windows
+windowrulev2 = float, class:^(Code)$, title:^(Open Folder)$
+windowrulev2 = size 800 600, class:^(Code)$, title:^(Open Folder)$
+windowrulev2 = center 1, class:^(Code)$, title:^(Open Folder)$
+
+# Fix VSCode file dialogs
+windowrulev2 = float, class:^(Code)$, title:^(Open File)$
+windowrulev2 = size 800 600, class:^(Code)$, title:^(Open File)$
+windowrulev2 = center 1, class:^(Code)$, title:^(Open File)$
+
+# Fix VSCode settings and other dialogs
+windowrulev2 = float, class:^(Code)$, title:^(Settings)$
+windowrulev2 = size 1000 700, class:^(Code)$, title:^(Settings)$
+windowrulev2 = center 1, class:^(Code)$, title:^(Settings)$
