feat: 更新 dotfiles 配置
- 完善 .gitignore 文件，排除 claude 和 vscode 缓存
- 更新 waybar, hyprland, wofi, fcitx5 等配置
- 添加新的脚本和应用程序桌面文件

--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,19 @@
 *_history
 *.secret
 *.key
-*.pem
+.pem
 
 # 忽略缓存文件
 .cache/
 __pycache__/
 *.pyc
+
+# Claude specific ignores
+claude/.credentials.json
+claude/.anthropic/
+claude/downloads/
+claude/ide/
+claude/projects/
+claude/shell-snapshots/
+claude/statsig/
+claude/todos/
