--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -58,6 +58,9 @@ exec-once = nm-applet
 # Start bluetooth manager applet
 exec-once = blueman-applet
 
+# Start gnome-keyring-daemon
+exec-once = gnome-keyring-daemon --start --components=pkcs11,secrets,ssh
+
 
 
 
@@ -116,7 +119,7 @@ general {
     gaps_in = 3
     gaps_out = 8
 
-    border_size = 2
+    border_size = 0
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(5e81acee) rgba(88c0d0ee) 45deg
@@ -439,6 +442,13 @@ windowrulev2 = center 1, class:^(Code)$, title:^(Open File)$
 windowrulev2 = float, class:^(Code)$, title:^(Settings)$
 windowrulev2 = size 1000 700, class:^(Code)$, title:^(Settings)$
 windowrulev2 = center 1, class:^(Code)$, title:^(Settings)$
+
+# Fix for browser context menus disappearing when losing focus
+windowrulev2 = stayfocused, class:^(Google-chrome|google-chrome|chromium|firefox)$, floating:1, xwayland:1
+
+# Force browser menus to be completely opaque
+windowrulev2 = opacity 1.0 override 1.0 override, class:^(Google-chrome|google-chrome|chromium|firefox)$, floating:1
+windowrulev2 = noblur, class:^(Google-chrome|google-chrome|chromium|firefox)$, floating:1
 
 # Chrome/Chromium specific fixes for context menus
 windowrulev2 = opacity 1.0 1.0, class:^(Google-chrome)$, title:^$
