--- a/config/applications/youtube-music.desktop
+++ b/config/applications/youtube-music.desktop
@@ -1,10 +1,11 @@
 [Desktop Entry]
 Name=YouTube Music
-Exec=/home/laofahai/dotfiles/scripts/youtube-music-wrapper.sh %U
+#Exec=/home/laofahai/dotfiles/scripts/youtube-music-wrapper.sh %U
+Exec=/home/laofahai/.local/bin/youtube-music-wrapper.sh %U
 Terminal=false
 Type=Application
 Icon=youtube-music
 StartupWMClass=com.github.th_ch.youtube_music
 Comment=YouTube Music Desktop App - including custom plugins
 Categories=AudioVideo;
-X-Desktop-File-Install-Version=0.28
+#X-Desktop-File-Install-Version=0.28
