--- a/config/fcitx5/conf/classicui.conf
+++ b/config/fcitx5/conf/classicui.conf
@@ -1,13 +1,13 @@
 # Vertical Candidate List
-Vertical Candidate List=False
+Vertical Candidate List=True
 # Use mouse wheel to go to prev or next page
 WheelForPaging=True
 # Font
-Font="Sans 10"
+Font="Noto Sans CJK SC 10"
 # Menu Font
-MenuFont="Sans 10"
+MenuFont="Noto Sans CJK SC 9"
 # Tray Font
-TrayFont="Sans Bold 10"
+TrayFont="Noto Sans CJK SC Bold 10"
 # Tray Label Outline Color
 TrayOutlineColor=#000000
 # Tray Label Text Color
@@ -19,7 +19,7 @@ ShowLayoutNameInIcon=True
 # Use input method language to display text
 UseInputMethodLanguageToDisplayText=True
 # Theme
-Theme=default
+Theme=modern
 # Force font DPI on Wayland
 ForceWaylandDPI=0
 # Enable fractional scale under Wayland
