feat: 重大重构和优化
✨ 新功能:
- 添加统一管理脚本 manage.sh，整合install/sync/cleanup/backup功能
- 增强配置状态检查和备份恢复功能
- 创建详细的项目优化计划文档

🔒 隐私保护:
- 强化 .gitignore 规则，保护个人敏感数据
- 移除Claude个人统计数据和本地设置
- 保护TOTP密钥、输入法历史等个人配置

🧹 代码清理:
- 删除过时的脚本文件 (pomodoro-old.sh, screenshot-backup.sh等)
- 移除重复和备份配置文件
- 清理个人配置文件污染

📚 文档更新:
- 更新README，添加新管理脚本使用说明
- 增加隐私保护和配置管理章节
- 完善安装和使用指南

这次更新大幅提升了项目的可维护性和用户隐私保护！

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ credentials.json
 __pycache__/
 *.pyc
 
-# Claude 相关
+# Claude 相关 - 个人数据和缓存
 claude/.credentials.json
 claude/.anthropic/
 claude/downloads/
@@ -38,6 +38,7 @@ claude/shell-snapshots/
 claude/statsig/
 claude/todos/
 claude/.git/
+claude/settings.local.json
 
 # VS Code 缓存和个人数据
 config/Code/
@@ -50,10 +51,23 @@ config/totp/secrets.conf
 .DS_Store
 Thumbs.db
 
-# 个人数据
+# 个人数据和状态文件
 config/totp/secrets.conf
+config/totp/current_index
 config/fcitx5/pinyin/user.dict
 config/fcitx5/pinyin/user.history
+config/fcitx5/conf/cached_layouts
+config/waybar/pomodoro_state.json
+
+# 应用个人配置
+config/Code/User/settings.json
+config/Code/User/keybindings.json
+config/Code/logs/
+config/Code/CachedExtensions/
 
 # 壁纸（文件太大）
 wallpapers/
+
+# 用户配置文件（包含个人隐私）
+.env.local
+shell/zshrc.local
