fix: 修复番茄工作法和通知系统问题，完善waybar组件
🔧 番茄工作法修复:
- 修复无限通知问题，添加notified标志防止重复通知
- 优化番茄完成统计逻辑
- 改进时间到期检测机制

📬 通知系统优化:
- 重构通知脚本，区分当前通知和历史通知
- 添加notification-control.sh处理各种操作
- 改进通知统计准确性和操作逻辑
- 支持左键、中键、右键不同功能

🔐 TOTP验证器优化:
- 修复服务列表生成问题
- 在tooltip中显示验证码和服务列表
- 改进用户体验和可读性

⚡ Waybar组件优化:
- 优化各组件更新频率
- 统一信号处理机制
- 提升整体性能和响应速度

现在所有waybar组件运行更稳定，用户体验显著提升！

--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -147,10 +147,13 @@
     "custom/notification": {
         "format": "{}",
         "exec": "~/.config/waybar/notification.sh",
-        "interval": 1,
+        "interval": 2,
         "return-type": "json",
-        "on-click": "makoctl dismiss --all && pkill -RTMIN+8 waybar",
-        "on-click-right": "makoctl restore && pkill -RTMIN+8 waybar"
+        "on-click": "~/.config/waybar/notification-control.sh left",
+        "on-click-middle": "~/.config/waybar/notification-control.sh middle",
+        "on-click-right": "~/.config/waybar/notification-control.sh right",
+        "signal": 7,
+        "tooltip": true
     },
     "custom/totp": {
         "format": "{}",
