feat(hyprland): 优化输入法窗口层级，解决微信遮挡问题
- 移除微信窗口置顶规则，避免其遮挡输入法候选框。
- 新增并强化 fcitx5 输入法窗口的 `windowrulev2` 和 `layerrule` 规则，确保输入法候选框始终显示在所有窗口的最顶层。
- 修复 `config/fcitx5-rime/conf/classicui.conf` 文件末尾缺少换行符的问题。

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -599,19 +599,17 @@ windowrulev2 = float, class:^(wechat)$, title:^(.*对话框.*)$
 windowrulev2 = float, class:^(wechat)$, title:^(.*Dialog.*)$
 
 # Force focus and center for WeChat popups
-windowrulev2 = stayfocused, class:^(wechat)$, title:^$
+# 降低微信弹窗优先级，避免遮挡输入法候选词
 windowrulev2 = center, class:^(wechat)$, title:^$
-windowrulev2 = pin, class:^(wechat)$, title:^$
+# 移除 pin 和 stayfocused，防止遮挡输入法
 
 # Handle WeChat subwindows (often have no title or empty title)
 windowrulev2 = float, class:^(wechat)$, title:^()$
-windowrulev2 = pin, class:^(wechat)$, title:^()$
-windowrulev2 = stayfocused, class:^(wechat)$, title:^()$
 windowrulev2 = center, class:^(wechat)$, title:^()$
+# 移除 pin 和 stayfocused，防止遮挡输入法
 
-# Ensure WeChat popups stay on top of everything
-windowrulev2 = pin, class:^(wechat)$, floating:1
-windowrulev2 = stayfocused, class:^(wechat)$, floating:1
+# 微信浮动窗口规则 - 降低优先级避免遮挡输入法
+# 移除 pin 和 stayfocused，让输入法候选词能够显示在上方
 
 # ========== FEISHU / LARK OPTIMIZATION ==========
 # Feishu main window optimization
@@ -718,3 +716,31 @@ windowrulev2 = opacity 1.0 1.0, class:^(thunar)$
 windowrulev2 = opacity 1.0 1.0, class:^(nautilus)$
 windowrulev2 = opacity 1.0 1.0, class:^(nemo)$
 windowrulev2 = opacity 1.0 1.0, class:^(pcmanfm)$
+
+# fcitx5 候选词窗口规则 - 多种可能的类名匹配
+windowrulev2 = pin, class:^(fcitx)$
+windowrulev2 = stayfocused, class:^(fcitx)$
+windowrulev2 = float, class:^(fcitx)$
+windowrulev2 = noblur, class:^(fcitx)$
+windowrulev2 = noshadow, class:^(fcitx)$
+windowrulev2 = noborder, class:^(fcitx)$
+
+# fcitx5 候选词窗口 - 可能的其他类名
+windowrulev2 = pin, class:^(fcitx5)$
+windowrulev2 = stayfocused, class:^(fcitx5)$
+windowrulev2 = float, class:^(fcitx5)$
+windowrulev2 = noblur, class:^(fcitx5)$
+windowrulev2 = noshadow, class:^(fcitx5)$
+windowrulev2 = noborder, class:^(fcitx5)$
+
+# fcitx5 输入法候选词 - 按标题匹配
+windowrulev2 = pin, title:^(fcitx)
+windowrulev2 = stayfocused, title:^(fcitx)
+windowrulev2 = float, title:^(fcitx)
+windowrulev2 = noblur, title:^(fcitx)
+windowrulev2 = noshadow, title:^(fcitx)
+windowrulev2 = noborder, title:^(fcitx)
+
+# 使用 layerrule 确保输入法在最顶层 - 这是最可靠的解决方案
+layerrule = noanim, fcitx
+layerrule = noanim, fcitx5
